<resources>
    <string name="app_name" translatable="false">"rahi's droid"</string>
    <string name="action_about">About</string>
    <string name="author" translatable="false">Raviraj Mangukiya (mang0055)</string>
    <string name="username" translatable="false">mang0055</string>
    <string name="password">password</string>

    <string name="label_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_register">New User / Register</string>
    <string name="label_forget_password">Forgot Password ?</string>
    <string name="label_remember_me">Remember me ?  </string>

    <string name="string_hint_guess_number">Guess a number</string>
    <string name="string_hint_game_instructions">Simple game where you need to guess number between 0 to 1000 and hit Guess button top right corner.\n\n You can see if number that you guessed is lower or higher over the screen.\n\n Good Luck ! </string>
</resources>
