<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquincollege.mang0055.myfirstapp.LoginExampleActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon"
                        android:layout_weight="1" />

                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif"
                        android:padding="35dp"
                        android:paddingBottom="10dp"
                        android:text="@string/label_login"
                        android:textSize="24sp"
                        android:layout_weight="1" />
                    
                    <EditText
                        android:id="@+id/edit_email"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true" />

                    <Switch
                        android:id="@+id/switch_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:checked="false"
                        android:text="@string/label_remember_me" />

                    <Button
                        android:id="@+id/btn_sign_in"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:paddingTop="10dp"
                        android:text="@string/label_sign_in" />

                    <TextView
                        android:id="@+id/btn_forgot_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="20dp"
                        android:text="@string/label_forget_password" />

                    <TextView
                        android:id="@+id/btn_sign_up"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:text="@string/label_register" />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>